--- a/cw_folder/wireframe_cw/src/components/weekcomp.css
+++ b/cw_folder/wireframe_cw/src/components/weekcomp.css
@@ -7,4 +7,5 @@
 
 .week_comp .lists{float: right;}
 
-.week_comp .tasksicon{width: 24px;}
+.week_comp .tasksicon{width: 14px;}
+.week_comp .dropdownicon{width: 10px;}
