--- a/cw_folder/wireframe_cw/src/components/weekcomp.css
+++ b/cw_folder/wireframe_cw/src/components/weekcomp.css
@@ -1,11 +1,23 @@
 .week_comp{
+    position: relative; cursor: pointer;
     overflow: hidden; box-sizing: border-box; padding: 14px 44px; background-color: #fff;
     border-bottom: 1px solid #949494;
 }
-.week_comp .dates{float: left; }
-.week_comp .date{font-size: 24px; font-weight: 800; color: #FF7449;}
-
-.week_comp .lists{float: right;}
-
-.week_comp .tasksicon{width: 14px;}
+.week_comp .dates{display: flex; float: left; }
+.week_comp .dates .date{font-size: 24px; font-weight: 800; color: #FF7449;}
+.week_comp .dates .todayicon{
+    display: initial; font-size: 10px;
+    margin-left: 17px; margin-top: 10px; width: 69px; height: 18px; text-align: center;
+    background-color: #FF7449; border-radius: 10px; color: #fff; text-transform: uppercase;
+}
+.week_comp .dates .todayicon.right{display: initial;}
+.week_comp .dates .todayicon.no{display:none}
+/* .week_comp .lists{
+    position: absolute; right: 14px; top: 24px; float: right;
+} */
+.week_comp .lists{
+    display: flex; float: right; box-sizing: border-box; padding: 8px 0;
+}
+.week_comp .lists > * {margin-left: 8px;}
+.week_comp .tasksicon{width: 16px; height: 16px; vertical-align: middle; margin-top: 2px;}
 .week_comp .dropdownicon{width: 10px;}
