--- a/jin_folder/Calendar/src/App.css
+++ b/jin_folder/Calendar/src/App.css
@@ -50,13 +50,13 @@ body {
     position: relative;
 }
 
-header {
+/*header {
   display: block;
   width: 100%;
   padding: 1.75em 0;
   border-bottom: 1px solid var(--border-color);
   background: var(--neutral-color);
-}
+}*/
 
 header #logo {
   font-size: 175%;
@@ -117,12 +117,11 @@ main {
 /* Calendar */
 
 .calendar {
-  border-radius: 16px;
   display: block;
   position: relative;
   width: 100%;
-  background: var(--neutral-color);
-  border: 1px solid var(--border-color);
+  /* background: var(--neutral-color); */
+  /* border: 1px solid var(--border-color); */
 }
 
 .calendar .header {
@@ -161,7 +160,17 @@ main {
   color: var(--concept-color);
   font-size: 80%;
   padding: .75em 0;
-  border-bottom: 1px solid var(--border-color);
+  /* border-bottom: 1px solid var(--border-color); */
+}
+
+.calendar .body {
+  position: relative;
+  height: inherit;
+  overflow: hidden;
+  cursor: pointer;
+  background: var(--neutral-color);
+  transition: 0.25s ease-out;
+  border-radius: 16px;
 }
 
 .calendar .body .cell {
@@ -231,6 +240,7 @@ main {
 
 .calendar .body .col {
   flex-grow: 0;
+  
   flex-basis: calc(100%/7);
   width: calc(100%/7);
 }
