--- a/cw_folder/wireframe_cw/src/App.css
+++ b/cw_folder/wireframe_cw/src/App.css
@@ -66,5 +66,7 @@
 .side{width: 200px; background-color: #f9f9f9;} */
 
 
-.main{width: 100%;}
+.main{width: 100%; height: 100%;}
+.main .container{height: 100%;}
+
 
